# coils2vmec

./: .gitignore  CMakeLists.txt  INSTALL.md  PROJECT_STRUCTURE.md  README.md  coils.2b40R1mB01  coils2vmec.ipynb  discrete_coil.txt  kind_map.json  makefile  pyproject.toml  requirements.txt  setup.py
.reasonix/truncated-results/: 1780653465712-d6e39591-run_command.txt  1780653768899-ced58a08-run_command.txt
coils2vmec/: fieldline_tracer.py  lcfs.py  plotting.py  utils.py
examples/: coils.c09r00  coils.h1_measure_raw  coils2vmec_ncsx.py  discrete_coil.txt  example_CNH1.py  example_pwO.py  threed1.default
src/: CMakeLists.txt
src/coils2vmec/: __init__.py  descur.py  descur_python.py  fieldline.py  fieldline_tracer.py  iota.py  lcfs.py  plotting.py  utils.py
src/fortran/: CMakeLists.txt  fieldline_tracer_module.f90  traceline.f90
