[build-system]
requires = ["setuptools>=64", "wheel", "f90wrap>=0.2.6", "numpy>=1.15"]
build-backend = "setuptools.build_meta"

[project]
name = "coils2vmec"
version = "0.2.0"
description = "Magnetic field line tracer and VMEC interface for coil analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Coils2VMEC Developers", email = "your.email@example.com"},
]
requires-python = ">=3.8"
keywords = ["physics", "plasma", "magnetic-field", "VMEC", "Fortran"]

dependencies = [
    "numpy>=1.15",
    "scipy>=1.0",
    "matplotlib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]
build = [
    "f90wrap>=0.2.6",
    "numpy>=1.15",
]

[project.urls]
Homepage = "https://github.com/yourusername/coils2vmec"
"Bug Reports" = "https://github.com/yourusername/coils2vmec/issues"
"Source Code" = "https://github.com/yourusername/coils2vmec"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100
