[build-system]
requires = [
    "scikit-build-core>=0.10",
    "cmake>=3.18",
    "ninja>=1.10",
    "numpy>=1.19",
    "f90wrap>=0.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "coils2vmec"
version = "0.1.0"
description = "Magnetic field line tracer and VMEC interface for coil analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Coils2VMEC Developers", email = "your.email@example.com"},
]
requires-python = ">=3.8"
keywords = ["physics", "plasma", "magnetic-field", "VMEC", "Fortran"]

dependencies = [
    "numpy>=1.15",
    "scipy>=1.0",
    "matplotlib>=3.0",
    "h5py>=2.10",
    "f90wrap>=0.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]
build = [
    "f90wrap>=0.2.6",
    "numpy>=1.15",
]

[project.urls]
Homepage = "https://github.com/username/coils2vmec"
Repository = "https://github.com/username/coils2vmec.git"

[tool.scikit-build]
cmake.version = ">=3.18"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/coils2vmec"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100
